2009-01-05  Jonny Lamb  <jonny@debian.org>
	* src/odccm.conf: Fix the permissions of odccm on the system bus. The
	only reason it worked before was because the default configuration was
	broken. See CVE-2008-4311 for more details.

--- a/odccm/src/odccm.conf
+++ b/odccm/src/odccm.conf
@@ -11,15 +11,9 @@
     <allow own="org.synce.odccm"/>
   </policy>
 
-  <!-- Allow anyone to invoke methods on the Manager and Device interfaces -->
+  <!-- Allow anyone to invoke methods on it. -->
   <policy context="default">
-    <allow send_interface="org.synce.odccm.DeviceManager"/>
-    <allow send_interface="org.synce.odccm.Device"/>
-
-    <allow receive_interface="org.synce.odccm.DeviceManager"
-           receive_sender="org.synce.odccm"/>
-    <allow receive_interface="org.synce.odccm.Device"
-           receive_sender="org.synce.odccm"/>
+    <allow send_destination="org.synce.odccm"/>
   </policy>
 
 </busconfig>
