--- a/trunk/odccm/src/odccm.conf
+++ b/trunk/odccm/src/odccm.conf
@@ -11,15 +11,9 @@
     <allow own="org.synce.odccm"/>
   </policy>
 
-  <!-- Allow anyone to invoke methods on the Manager and Device interfaces -->
+  <!-- Allow anyone to invoke methods on it. -->
   <policy context="default">
-    <allow send_interface="org.synce.odccm.DeviceManager"/>
-    <allow send_interface="org.synce.odccm.Device"/>
-
-    <allow receive_interface="org.synce.odccm.DeviceManager"
-           receive_sender="org.synce.odccm"/>
-    <allow receive_interface="org.synce.odccm.Device"
-           receive_sender="org.synce.odccm"/>
+    <allow send_destination="org.synce.odccm"/>
   </policy>
 
 </busconfig>
